--- a/GenIO.ucf
+++ b/GenIO.ucf
@@ -1,5 +1,5 @@
 # soldered 50MHz Clock.
-NET "Clk_50MHz" LOC = "C9" | IOSTANDARD = LVTTL; #| PERIOD = 100.0ns HIGH 50%;
+NET "Clk_50MHz" LOC = "C9" | IOSTANDARD = LVTTL | PERIOD = 10.0ns HIGH 50%;
 
 # Ignore cross-clock domain data paths in timing analysis
 #NET "Clk50"  TNM = "TNM_Clk50";
@@ -11,7 +11,7 @@ NET "Clk_50MHz" LOC = "C9" | IOSTANDARD = LVTTL; #| PERIOD = 100.0ns HIGH 50%;
 # Push-buttons (Press = Hi)
 #
 #NET "btn_north" LOC = "V4"  | IOSTANDARD = LVTTL | PULLDOWN;
-#NET "btn_east"  LOC = "H13" | IOSTANDARD = LVTTL | PULLDOWN;
+NET "reset"  LOC = "H13" | IOSTANDARD = LVTTL | PULLDOWN;
 #NET "btn_south" LOC = "K17" | IOSTANDARD = LVTTL | PULLDOWN;
 #NET "btn_west"  LOC = "D18" | IOSTANDARD = LVTTL | PULLDOWN;
 
@@ -33,9 +33,9 @@ NET "Clk_50MHz" LOC = "C9" | IOSTANDARD = LVTTL; #| PERIOD = 100.0ns HIGH 50%;
 #
 # Simple LEDs (Hi = On)
 #
-#NET "led<0>" LOC = "F12" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 4;
+#NET "led0" LOC = "F12" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 4;
 #NET "led<1>" LOC = "E12" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 4;
-#NET "led<2>" LOC = "E11" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 4;
+NET "isfound" LOC = "E11" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 4;
 #NET "led<3>" LOC = "F11" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 4;
 #NET "led<4>" LOC = "C11" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 4;
 #NET "led<5>" LOC = "D11" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 4;
