--- a/GenIO.ucf
+++ b/GenIO.ucf
@@ -1,5 +1,5 @@
 # soldered 50MHz Clock.
-NET "Clk_50MHz" LOC = "C9" | IOSTANDARD = LVTTL | PERIOD = 10.0ns HIGH 50%;
+NET "Clk_50MHz" LOC = "C9" | IOSTANDARD = LVTTL; #| PERIOD = 10.0ns HIGH 50%;
 
 # Ignore cross-clock domain data paths in timing analysis
 #NET "Clk50"  TNM = "TNM_Clk50";
@@ -11,15 +11,15 @@ NET "Clk_50MHz" LOC = "C9" | IOSTANDARD = LVTTL | PERIOD = 10.0ns HIGH 50%;
 # Push-buttons (Press = Hi)
 #
 #NET "btn_north" LOC = "V4"  | IOSTANDARD = LVTTL | PULLDOWN;
-NET "reset"  LOC = "H13" | IOSTANDARD = LVTTL | PULLDOWN;
-#NET "btn_south" LOC = "K17" | IOSTANDARD = LVTTL | PULLDOWN;
+#NET "btn_east"  LOC = "H13" | IOSTANDARD = LVTTL | PULLDOWN;
+NET "Reset" LOC = "K17" | IOSTANDARD = LVTTL | PULLDOWN;
 #NET "btn_west"  LOC = "D18" | IOSTANDARD = LVTTL | PULLDOWN;
 
 #
 # Slide switches (Up = Hi)
 #
-#NET "SW<0>" LOC = "L13" | IOSTANDARD = LVTTL | PULLUP;
-#NET "SW<1>" LOC = "L14" | IOSTANDARD = LVTTL | PULLUP;
+#NET "SW_0" LOC = "L13" | IOSTANDARD = LVTTL | PULLUP;
+#NET "SW_1" LOC = "L14" | IOSTANDARD = LVTTL | PULLUP;
 #NET "SW<2>" LOC = "H18" | IOSTANDARD = LVTTL | PULLUP;
 #NET "SW<3>" LOC = "N17" | IOSTANDARD = LVTTL | PULLUP;
 
@@ -33,20 +33,20 @@ NET "reset"  LOC = "H13" | IOSTANDARD = LVTTL | PULLDOWN;
 #
 # Simple LEDs (Hi = On)
 #
-#NET "led0" LOC = "F12" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 4;
-#NET "led<1>" LOC = "E12" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 4;
-NET "isfound" LOC = "E11" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 4;
-#NET "led<3>" LOC = "F11" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 4;
-#NET "led<4>" LOC = "C11" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 4;
-#NET "led<5>" LOC = "D11" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 4;
-#NET "led<6>" LOC = "E9"  | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 4;
-#NET "led<7>" LOC = "F9"  | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 4;
+NET "typing" LOC = "F12" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 4;
+NET "datardy1" LOC = "E12" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 4;
+NET "datardy2" LOC = "E11" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 4;
+NET "isfound" LOC = "F11" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 4;
+NET "led4" LOC = "C11" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 4;
+NET "led5" LOC = "D11" | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 4;
+NET "led6" LOC = "E9"  | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 4;
+NET "led7" LOC = "F9"  | IOSTANDARD = LVTTL | SLEW = SLOW | DRIVE = 4;
 
 #
 # PS/2 port
 #
-#NET "PS2_Data" LOC = "G13" | IOSTANDARD = LVCMOS33 | SLEW = SLOW | DRIVE = 8;
-#NET "PS2_Clk"  LOC = "G14" | IOSTANDARD = LVCMOS33 | SLEW = SLOW | DRIVE = 8;
+NET "PS2_Data" LOC = "G13" | IOSTANDARD = LVCMOS33 | SLEW = SLOW | DRIVE = 8;
+NET "PS2_Clk"  LOC = "G14" | IOSTANDARD = LVCMOS33 | SLEW = SLOW | DRIVE = 8;
 
 #
 # VGA
