--- a/GenIO.ucf
+++ b/GenIO.ucf
@@ -1,5 +1,5 @@
 # soldered 50MHz Clock.
-NET "Clk_50MHz" LOC = "C9" | IOSTANDARD = LVTTL; #| PERIOD = 10.0ns HIGH 50%;
+NET "Clk_50MHz" LOC = "C9" | IOSTANDARD = LVTTL | PERIOD = 8.077ns HIGH 50%;
 
 # Ignore cross-clock domain data paths in timing analysis
 #NET "Clk50"  TNM = "TNM_Clk50";
